log
Thu Mar 26 06:58:23 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
ad43506
Thu Mar 26 07:00:02 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
eb19ab4
Thu Mar 26 07:05:51 PM UTC 2026: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:19: error: incompatible types when initializing type ‘List *’ {aka ‘struct List *’} using type ‘List’ {aka ‘struct List’}
   35 |     List *lista = (*lista) malloc(1 * sizeof(List));
      |                   ^
list.c:35:28: error: expected ‘,’ or ‘;’ before ‘malloc’
   35 |     List *lista = (*lista) malloc(1 * sizeof(List));
      |                            ^~~~~~
193adb8
Thu Mar 26 07:06:14 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
ac7538d
Thu Mar 26 07:08:58 PM UTC 2026: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
1d44408
Thu Mar 26 07:09:37 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
59875f5
Thu Mar 26 07:10:47 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
31f2eb2
Thu Mar 26 07:13:35 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
58fb883
Thu Mar 26 07:16:51 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:48:18: error: initialization of ‘Node **’ from incompatible pointer type ‘Node *’ [-Wincompatible-pointer-types]
   48 |     Node **aux = list->head;
      |                  ^~~~
list.c:50:19: error: assignment to ‘Node *’ from incompatible pointer type ‘Node **’ [-Wincompatible-pointer-types]
   50 |     list->current = aux;
      |                   ^
list.c:52:16: error: ‘aux’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   52 |     return (aux->data);
      |                ^~
      |             (* )
list.c:53:1: error: control reaches end of non-void function [-Werror=return-type]
   53 | }
      | ^
cc1: all warnings being treated as errors
b20c82f
Thu Mar 26 07:18:18 PM UTC 2026: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
afc02da
Thu Mar 26 07:22:35 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/60
da5ed27
Thu Mar 26 07:24:47 PM UTC 2026: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:56:12: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   56 |     if(list->prev == NULL) return NULL;
      |            ^~
list.c:58:25: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   58 |     list->current = list->prev;
      |                         ^~
list.c:60:17: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   60 |     return (list->prev->data);
      |                 ^~
list.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
   61 | }
      | ^
cc1: all warnings being treated as errors
31745a3
Thu Mar 26 07:26:04 PM UTC 2026: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/60
cc61cbb
Thu Mar 26 07:27:34 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
a55a6ee
Thu Mar 26 07:28:32 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 20/60
eaed1cd
Thu Mar 26 07:30:36 PM UTC 2026: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 20/60
5c2a044
Thu Mar 26 07:31:57 PM UTC 2026: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 30/60
53cbeba
Thu Mar 26 07:38:48 PM UTC 2026: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:92:20: error: dereferencing ‘void *’ pointer [-Werror]
   92 |     firstList(list)->prev = aux;
      |                    ^~
list.c:92:20: error: request for member ‘prev’ in something not a structure or union
cc1: all warnings being treated as errors
4e50e9d
Thu Mar 26 07:39:45 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
c7a7499
Thu Mar 26 07:43:00 PM UTC 2026: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
e743da3
Thu Mar 26 07:44:04 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 30/60
494650e
Thu Mar 26 07:46:52 PM UTC 2026: 
 tests:  9|3
total_score: 30/60
7060aff
Thu Mar 26 07:54:07 PM UTC 2026: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  9|3
total_score: 30/60
53da654
Thu Mar 26 07:57:13 PM UTC 2026: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  9|3
total_score: 30/60
f63f1fd
Thu Mar 26 07:59:34 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:91:28: error: dereferencing ‘void *’ pointer [-Werror]
   91 |     Node *aux = createNode(*data);
      |                            ^~~~~
list.c:91:28: error: invalid use of void expression
cc1: all warnings being treated as errors
50e7ef6
Thu Mar 26 08:02:05 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 30/60
3389472
Thu Mar 26 08:02:47 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 40/60
2be9175
Thu Mar 26 08:03:25 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 40/60
59e74b0
Thu Mar 26 08:03:56 PM UTC 2026: 
 tests:  10|2
total_score: 40/60
db8a2b1
Sun Mar 29 04:47:54 PM UTC 2026: 
 tests:  10|2
total_score: 40/60
f1c43dd
Sun Mar 29 04:55:02 PM UTC 2026: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
729f1ec
